--- a/src/theme-base/_components.scss
+++ b/src/theme-base/_components.scss
@@ -90,7 +90,7 @@
     //Messages
     @import './components/messages/_inlinemessage';
     @import './components/messages/_message';
-    @import 'components/messages/toast';
+    @import './components/messages/_toast';
     
     //MultiMedia
     @import './components/multimedia/_galleria';
