--- a/src/theme-base/components/data/_timeline.scss
+++ b/src/theme-base/components/data/_timeline.scss
@@ -1,4 +1,7 @@
 .p-timeline {
+    .p-timeline-event-content {
+        color: $timelineTextColor;
+    }
     .p-timeline-event-marker {
         border: $timelineEventMarkerBorder; 
         border-radius: $timelineEventMarkerBorderRadius;
