--- a/src/theme-base/components/input/_inputgroup.scss
+++ b/src/theme-base/components/input/_inputgroup.scss
@@ -10,6 +10,11 @@
     &:last-child {
         border-right: $inputBorder;
     }
+
+    &.p-disabled {
+        background-color: $disabledButtonBg;
+        color: $disabledButtonTextColor;
+    }
 }
 
 .p-inputgroup {
