--- a/src/theme-base/components/input/_inputotp.scss
+++ b/src/theme-base/components/input/_inputotp.scss
@@ -5,6 +5,22 @@
 }
 
 .p-inputotp-input {
+    font-size: $inputOptFontSize;
     text-align: center;
+
     width: 2 * nth($inputPadding, 2) + 1rem;
+
+    border: none;
+    border-bottom: $inputListBorder;
+    border-radius: 0;
+
+    background: transparent;
+
+    &.p-disabled {
+        background: transparent;
+    }
+}
+
+.p-inputotp-input:enabled:focus {
+    box-shadow: none;
 }
