--- a/src/theme-base/components/input/_rating.scss
+++ b/src/theme-base/components/input/_rating.scss
@@ -10,6 +10,8 @@
 .p-rating-item {
     display: inline-flex;
     align-items: center;
+    justify-content: center;
+    
     cursor: pointer;
 }
 
@@ -40,7 +42,7 @@
             }
         }
 
-        &.p-focus {
+        &:focus-visible {
             @include focused();
         }
 
