--- a/src/theme-base/components/misc/_tag.scss
+++ b/src/theme-base/components/misc/_tag.scss
@@ -1,12 +1,16 @@
 @use 'sass:math';
 
 .p-tag {
-    background: $badgeBg;
+    height: $tagHeight;
+    
     color: $badgeTextColor;
-    font-size: $badgeFontSize;
+    font-size: $tagFontSize;
     font-weight: $badgeFontWeight;
+
     padding: $tagPadding;
     border-radius: $borderRadius;
+
+    background: $badgeBg;
 
     &.p-tag-success {
         background-color: $successButtonBg;
@@ -28,13 +32,17 @@
         color: $dangerButtonTextColor;
     }
 
+    &.p-tag-rounded {
+        border-radius: 100px;
+    }
+
     .p-tag-icon {
         margin-right: math.div($inlineSpacing, 2);
-        font-size: $badgeFontSize;
+        font-size: $tagFontSize;
 
         &.p-icon {
-            width: $badgeFontSize;
-            height: $badgeFontSize;
+            width: $tagFontSize;
+            height: $tagFontSize;
         }
     }
 }
