--- a/src/theme-base/components/overlay/_tooltip.scss
+++ b/src/theme-base/components/overlay/_tooltip.scss
@@ -3,7 +3,7 @@
         background: $tooltipBg;
         color: $tooltipTextColor;
         padding: $tooltipPadding;
-        box-shadow: $inputOverlayShadow;
+        box-shadow: $buttonHoverShadow;
         border-radius: $borderRadius;
     }
 
