--- a/src/theme-base/components/panel/_scrollpanel.scss
+++ b/src/theme-base/components/panel/_scrollpanel.scss
@@ -2,6 +2,7 @@
 	.p-scrollpanel-bar {
 		background: $scrollPanelTrackBg;
 		border: $scrollPanelTrackBorder;
+		border-radius: $borderRadius;
 
 		&:focus-visible {
 			@include focused();
