--- a/src/theme-base/components/input/_autocomplete.scss
+++ b/src/theme-base/components/input/_autocomplete.scss
@@ -1,8 +1,13 @@
-@use 'sass:math';
+@use "sass:math";
 
+// core
 .p-autocomplete {
+    display: inline-flex;
+    height: min-content;
+
     .p-autocomplete-loader {
         right: nth($inputPadding, 2); 
+        color: $inputIconColor;
     }
 
     &.p-autocomplete-dd {
@@ -10,41 +15,114 @@
             right: nth($inputPadding, 2) + $buttonIconOnlyWidth;
         }
     }
-    
+}
+
+.p-autocomplete-multiple-container {
+    outline-color: transparent;
+
+    cursor: text;
+    overflow: hidden;
+
+    height: min-content;
+
+    display: flex;
+    flex-grow: 1;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: math.div($inlineSpacing, 2);
+
+    margin: 0;
+
+    list-style-type: none;
+
+    &:has(.p-autocomplete-token) {
+        padding: math.div($inlineSpacing, 2);
+    }
+}
+
+.p-autocomplete-token {
+    cursor: default;
+
+    display: inline-flex;
+    align-items: center;
+    flex: 0 0 auto;
+
+    height: $chipHeight;
+}
+
+.p-autocomplete-input-token {
+    flex: 1 1 auto;
+    display: inline-flex;
+}
+
+.p-autocomplete-token-icon {
+    cursor: pointer;
+}
+
+.p-autocomplete-input-token input {
+    border: 0 none;
+    outline: 0 none;
+    background-color: transparent;
+    margin: 0;
+    padding: 0;
+    box-shadow: none;
+    border-radius: 0;
+    width: 100%;
+}
+
+.p-fluid .p-autocomplete {
+    display: flex;
+}
+
+// theme
+.p-autocomplete {
+
     .p-autocomplete-multiple-container {
-        padding: math.div(nth($inputPadding, 1), 2) nth($inputPadding, 2);
-        gap: $inlineSpacing;
         
         &:not(.p-disabled):hover {
             border-color: $inputHoverBorderColor;
         }
-
+    
         &:not(.p-disabled).p-focus {
             @include focused-input();
         }
 
+        &.p-disabled {
+            cursor: not-allowed;
+            background-color: $disabledButtonBg;
+        }
+
+        .p-autocomplete-token {
+            padding: $chipPadding;
+            background: $chipBg;
+            color: $chipTextColor;
+            border-radius: $chipBorderRadius;
+
+            &.p-focus {
+                @include focused();
+            }
+
+            .p-autocomplete-token-icon {
+                margin-left: $inlineSpacing;
+            }
+        }
+
+        .p-autocomplete-token + .p-autocomplete-input-token {
+            padding: 0 $inlineSpacing;
+        }
+
         .p-autocomplete-input-token {
             padding: math.div(nth($inputPadding, 1), 2) 0;
-            
+
             input {
+                height: $chipHeight;
+                
                 font-family: var(--font-family);
                 font-feature-settings: var(--font-feature-settings, normal);
                 font-size: $inputTextFontSize;
                 color: $textColor;
-                padding: 0;
+
                 margin: 0;
-            }
-        }
-
-        .p-autocomplete-token {
-            padding: math.div(nth($inputPadding, 1), 2) nth($inputPadding, 2);
-            margin-right: $inlineSpacing;
-            background: $highlightBg;
-            color: $highlightTextColor;
-            border-radius: $borderRadius;
-
-            .p-autocomplete-token-icon {
-                margin-left: $inlineSpacing;
             }
         }
     }
@@ -60,6 +138,7 @@
     border: $inputOverlayBorder;
     border-radius: $borderRadius;
     box-shadow: $inputOverlayShadow;
+    margin-top: nth($inputListItemMargin, 1);
 
     .p-autocomplete-items {
         padding: $inputListPadding;
@@ -73,8 +152,16 @@
             transition: $listItemTransition;
             border-radius: $inputListItemBorderRadius;
 
+            &:first-of-type {
+                margin-top: 0;
+            }
+
+            &:last-of-type {
+                margin-bottom: 0;
+            }
+
             &:hover {
-                color: $inputListItemTextHoverColor;
+                color: $inputListItemHoverTextColor;
                 background: $inputListItemHoverBg;
             }
 
