--- a/src/theme-base/components/input/_password.scss
+++ b/src/theme-base/components/input/_password.scss
@@ -2,17 +2,46 @@
     &.p-invalid.p-component > .p-inputtext {
         @include invalid-input();
     }
+
+    .p-input-icon {
+        cursor: pointer;
+
+        color: $inputIconColor;
+        right: .75rem;
+    }
+
+    &.p-disabled {
+        opacity: 1;
+
+        .p-input-icon {
+            opacity: $disabledOpacity;
+        }
+    }
+}
+
+.p-password-input {
+    width: 100%;
+    height: 100%;
 }
 
 .p-password-panel {
-    padding: $panelContentPadding;
-    background: $panelContentBg;
-    color: $panelContentTextColor;
-    border: $overlayContentBorder;
-    box-shadow: $inputOverlayShadow;
+    color: $inputListTextColor;
+
+    padding: $inputPaddingLeftRight;
+    margin-top: $inputListPadding;
+
+    border: $inputOverlayBorder;
     border-radius: $borderRadius;
 
+    background: $inputOverlayBg;
+    box-shadow: $inputOverlayShadow;
+
     .p-password-meter {
+        overflow: hidden;
+
+        height: .5rem;
+
+        border-radius: 1rem;
         margin-bottom: $inlineSpacing;
         background: $passwordMeterBg;
 
