--- a/src/theme-base/components/input/_selectbutton.scss
+++ b/src/theme-base/components/input/_selectbutton.scss
@@ -1,44 +1,58 @@
 .p-selectbutton {
+    height: min-content;
+    gap: $selectButtonGroupPadding;
+
+    padding: $selectButtonGroupPadding;
+    background-color: $selectButtonGroupBg;
+    border-radius: $borderRadius;
+
     .p-button {
-        background: $toggleButtonBg;
-        border: $toggleButtonBorder;
-        color: $toggleButtonTextColor;
+        flex-grow: 1;
+        
+        background: $selectButtonBg;
+        border: $selectButtonBorder;
+        border-radius: $selectButtonBorderRadius;
+        color: $selectButtonTextColor;
         transition: $formElementTransition;
 
         .p-button-icon-left,
         .p-button-icon-right {
-            color: $toggleButtonIconColor;
+            color: $selectButtonIconColor;
+        }
+
+        &.p-disabled {
+            background: transparent;
         }
 
         &:not(.p-disabled):not(.p-highlight):hover {
-            background: $toggleButtonHoverBg;
-            border-color: $toggleButtonHoverBorderColor;
-            color: $toggleButtonTextHoverColor;
+            background: $selectButtonHoverBg;
+            border-color: $selectButtonHoverBorderColor;
+            color: $selectButtonHoverTextColor;
 
             .p-button-icon-left,
             .p-button-icon-right {
-                color: $toggleButtonIconHoverColor;
+                color: $selectButtonIconHoverColor;
             }
         }
 
-        &.p-highlight {
-            background: $toggleButtonActiveBg;
-            border-color: $toggleButtonActiveBorderColor;
-            color: $toggleButtonTextActiveColor;
+        &:not(.p-disabled).p-highlight {
+            background: $selectButtonActiveBg;
+            border-color: $selectButtonActiveBorderColor;
+            color: $selectButtonActiveTextColor;
 
             .p-button-icon-left,
             .p-button-icon-right {
-                color: $toggleButtonIconActiveColor;
+                color: $selectButtonIconActiveColor;
             }
 
             &:hover {
-                background: $toggleButtonActiveHoverBg;
-                border-color: $toggleButtonActiveHoverBorderColor;
-                color: $toggleButtonTextActiveHoverColor;
+                background: $selectButtonActiveHoverBg;
+                border-color: $selectButtonActiveHoverBorderColor;
+                color: $selectButtonTextActiveHoverColor;
 
                 .p-button-icon-left,
                 .p-button-icon-right {
-                    color: $toggleButtonIconActiveHoverColor;
+                    color: $selectButtonIconActiveHoverColor;
                 }
             }
         }
