--- a/src/theme-base/components/input/_slider.scss
+++ b/src/theme-base/components/input/_slider.scss
@@ -2,11 +2,15 @@
 
 .p-slider {
     background: $sliderBg;
+
     border: $sliderBorder;
     border-radius: $borderRadius;
 
     &.p-slider-horizontal {
         height: $sliderHorizontalHeight;
+
+        margin-top: math.div(calc($sliderHandleHeight - $sliderHorizontalHeight), 2);
+        margin-bottom: math.div(calc($sliderHandleHeight - $sliderHorizontalHeight), 2);
 
         .p-slider-handle {
             margin-top: math.div(-1 * $sliderHandleHeight, 2);
@@ -16,6 +20,9 @@
 
     &.p-slider-vertical {
         width: $sliderVerticalWidth;
+
+        margin-top: math.div(calc($sliderHandleHeight - $sliderVerticalWidth), 2);
+        margin-bottom: math.div(calc($sliderHandleHeight - $sliderVerticalWidth), 2);
 
         .p-slider-handle {
             margin-left: math.div(-1 * $sliderHandleWidth, 2);
@@ -38,6 +45,8 @@
 
     .p-slider-range {
         background: $sliderRangeBg;
+        border-top-left-radius: $sliderHandleBorderRadius;
+        border-bottom-left-radius: $sliderHandleBorderRadius;
     }
 
     &:not(.p-disabled) {
