--- a/src/theme-base/components/menu/_breadcrumb.scss
+++ b/src/theme-base/components/menu/_breadcrumb.scss
@@ -1,17 +1,31 @@
+@use "sass:math";
+
 .p-breadcrumb {
 	background: $breadcrumbBg;
 	border: $breadcrumbBorder;
-	border-radius: $borderRadius;
 	padding: $breadcrumbPadding;
 
 	.p-breadcrumb-list {
 		li {
 			.p-menuitem-link {
 				transition: $listItemTransition;
-				border-radius: $borderRadius;
+
+				border-radius: $menuitemBorderRadius;
+				padding: .25rem;
 
 				&:focus-visible {
 					@include focused();
+				}
+
+				&:hover {
+					background-color: $menuitemHoverBg;
+					.p-menuitem-text {
+						color: $menuitemHoverTextColor;
+					}
+
+					.p-menuitem-icon {
+						color: $menuitemHoverIconColor;
+					}
 				}
 
 				.p-menuitem-text {
@@ -20,15 +34,20 @@
 
 				.p-menuitem-icon {
 					color: $breadcrumbItemIconColor;
+					font-size: $menuitemSubmenuIconFontSize;
 				}
 			}
 
 			&.p-menuitem-separator {
-				margin: 0 $inlineSpacing 0 $inlineSpacing;
+				margin: 0 math.div($inlineSpacing, 2);
 				color: $breadcrumbSeparatorColor;
+				font-size: $menuitemSubmenuIconFontSize;
 			}
 
 			&:last-child {
+				pointer-events: none;				
+				opacity: .6;
+
 				.p-menuitem-text {
 					color: $breadcrumbLastItemTextColor;
 				}
