--- a/src/theme-base/components/menu/_tabmenu.scss
+++ b/src/theme-base/components/menu/_tabmenu.scss
@@ -1,25 +1,22 @@
 .p-tabmenu {
     .p-tabmenu-nav {
         background: $tabviewNavBg;
-        border: $tabviewNavBorder;
-        border-width: $tabviewNavBorderWidth;
+        border-bottom: $tabviewNavBorder;
 
         .p-tabmenuitem {
             margin-right: $tabviewHeaderSpacing;
 
             .p-menuitem-link {
-                border: $tabviewHeaderBorder;
-                border-width: $tabviewHeaderBorderWidth;
-                border-color: $tabviewHeaderBorderColor;
                 background: $tabviewHeaderBg;
                 color: $tabviewHeaderTextColor;
-                padding: $tabviewHeaderPadding;
                 font-weight: $tabviewHeaderFontWeight;
-                border-top-right-radius: $borderRadius;
-                border-top-left-radius: $borderRadius;
-                transition: $listItemTransition;
+
+                border-bottom: $tabviewHeaderBorder;
+
+                padding: $tabviewHeaderPadding;
                 margin: $tabviewHeaderMargin;
-                height: calc(100% + #{-1 * nth($tabviewHeaderMargin, 3)});
+
+                transition: $listItemTransition;
 
                 .p-menuitem-icon {
                     margin-right: $inlineSpacing;
@@ -34,7 +31,7 @@
                 .p-menuitem-link {
                     background: $tabviewHeaderHoverBg;
                     border-color: $tabviewHeaderHoverBorderColor;
-                    color: $tabviewHeaderTextHoverColor;
+                    color: $tabviewHeaderHoverTextColor;
                 }
             }
 
@@ -42,7 +39,7 @@
                 .p-menuitem-link {
                     background: $tabviewHeaderActiveBg;
                     border-color: $tabviewHeaderActiveBorderColor;
-                    color: $tabviewHeaderTextActiveColor;
+                    color: $tabviewHeaderActiveTextColor;
                 }
             }
         }
