--- a/src/theme-base/components/messages/_toast.scss
+++ b/src/theme-base/components/messages/_toast.scss
@@ -1,14 +1,49 @@
+@use "sass:math";
+
+@mixin style-severity($color-background, $border, $color-icon) {
+    background: $color-background;
+    border: $border;
+
+    .p-toast-message-content {
+        border-left: $messageBorderWidth solid $color-icon;
+    }
+
+    .p-toast-message-icon {
+        color: $color-icon;
+    }
+
+    .p-toast-icon-close {
+        color: $color-icon;
+        border: $border;
+
+        background: transparent;
+
+        &:hover {
+            color: $color-icon;
+            border-color: $color-icon;
+
+            box-shadow: $buttonHoverShadow;
+            transition: $formElementTransition;
+        }
+    }
+}
+
 .p-toast {
     opacity: $toastOpacity;
 
     .p-toast-message {
+        overflow: hidden;
+
         margin: $toastMargin;
         box-shadow: $toastShadow;
         border-radius: $borderRadius;
 
         .p-toast-message-content {
+            gap: 1rem;
+
             padding: $toastPadding;
-            border-width: $toastBorderWidth;
+            border-left-width: $toastBorderWidth;
+            border-left-style: solid;
 
             .p-toast-message-text {
                 margin: $toastMessageTextMargin;
@@ -16,20 +51,27 @@
 
             .p-toast-message-icon {
                 font-size: $toastIconFontSize;
-                
+
                 &.p-icon {
                     width: $toastIconFontSize;
                     height: $toastIconFontSize;
                 }
             }
 
-
             .p-toast-summary {
                 font-weight: $toastTitleFontWeight;
+                font-size: $messageTextSummaryFontSize;
+                color: $messageTextSummaryColor;
+
+                margin: auto 0;
             }
 
             .p-toast-detail {
-                margin: $toastDetailMargin;
+                font-weight: $messageTextDetailFontWeight;
+                font-size: $messageTextDetailFontSize;
+                color: $messageTextDetailColor;
+
+                margin-top: 0.25rem;
             }
         }
 
@@ -37,65 +79,40 @@
             width: $toastIconFontSize;
             height: $toastIconFontSize;
             border-radius: $actionIconBorderRadius;
-            background: transparent;
+            background: $surface-ground;
             transition: $actionIconTransition;
-
-            &:hover {
-                background: rgba(255,255,255,.5);
-            }
-
-            &:focus-visible {
-                @include focused();
-            }
         }
 
         &.p-toast-message-info {
-            background: $infoMessageBg;
-            border: $infoMessageBorder;
-            border-width: $messageBorderWidth;
-            color: $infoMessageTextColor;
-
-            .p-toast-message-icon,
-            .p-toast-icon-close {
-                color: $infoMessageIconColor;
-            }
+            @include style-severity(
+                $color-background: $infoMessageBg,
+                $border: $infoMessageBorder,
+                $color-icon: $infoMessageIconColor
+            );
         }
 
         &.p-toast-message-success {
-            background: $successMessageBg;
-            border: $successMessageBorder;
-            border-width: $messageBorderWidth;
-            color: $successMessageTextColor;
-
-            .p-toast-message-icon,
-            .p-toast-icon-close {
-                color: $successMessageIconColor;
-            }
+            @include style-severity(
+                $color-background: $successMessageBg,
+                $border: $successMessageBorder,
+                $color-icon: $successMessageIconColor
+            );
         }
 
         &.p-toast-message-warn {
-            background: $warningMessageBg;
-            border: $warningMessageBorder;
-            border-width: $messageBorderWidth;
-            color: $warningMessageTextColor;
-
-            .p-toast-message-icon,
-            .p-toast-icon-close {
-                color: $warningMessageIconColor;
-            }
+            @include style-severity(
+                $color-background: $warningMessageBg,
+                $border: $warningMessageBorder,
+                $color-icon: $warningMessageIconColor
+            );
         }
 
         &.p-toast-message-error {
-            background: $errorMessageBg;
-            border: $errorMessageBorder;
-            border-width: $messageBorderWidth;
-            color: $errorMessageTextColor;
-
-            .p-toast-message-icon,
-            .p-toast-icon-close {
-                color: $errorMessageIconColor;
-            }
+            @include style-severity(
+                $color-background: $dangerMessageBg,
+                $border: $dangerMessageBorder,
+                $color-icon: $dangerMessageIconColor
+            );
         }
-
     }
 }
