--- a/src/theme-base/components/misc/_avatar.scss
+++ b/src/theme-base/components/misc/_avatar.scss
@@ -1,24 +1,64 @@
 .p-avatar {
+    height: 2rem;
+    width: 2rem;
+
+    color: $avatarTextColor;
+    font-size: 1rem;
+    
     background-color: $avatarBg;
     border-radius: $borderRadius;
 
+    &:not(.p-avatar-image ) {
+        border: $avatarBorder;
+    }
+
+    &.p-avatar-image {
+        background: transparent;
+        position: relative;
+
+        img {
+            position: relative;
+            object-fit: cover;
+            border-radius: inherit;
+        }
+
+        .p-badge {
+            z-index: 1;
+        }
+
+        &::before {
+            content: '';
+
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+
+            border: $avatarBorder;
+            border-radius: inherit;
+
+            z-index: 1;
+        }
+    }
+
     &.p-avatar-lg {
-        width: 3rem;
-        height: 3rem;
-        font-size: 1.5rem;
+        width: 2.5rem;
+        height: 2.5rem;
+        font-size: 1rem;
 
         .p-avatar-icon {
-            font-size: 1.5rem;
+            font-size: 1rem;
         }
     }
 
     &.p-avatar-xl {
-        width: 4rem;
-        height: 4rem;
-        font-size: 2rem;
+        width: 3.5rem;
+        height: 3.5rem;
+        font-size: 1.5rem;
 
         .p-avatar-icon {
-            font-size: 2rem;
+            font-size: 1.5rem;
         }
     }
 }
@@ -26,9 +66,3 @@
 .p-avatar-circle {
     border-radius: 50%;
   }
-
-.p-avatar-group {
-    .p-avatar {
-        border: 2px solid $panelContentBg;
-    }
-}
