--- a/src/theme-base/components/overlay/_dialog.scss
+++ b/src/theme-base/components/overlay/_dialog.scss
@@ -18,14 +18,11 @@
 
         .p-dialog-header-icon {
             @include action-icon();
-
-            & {
-                margin-right: $inlineSpacing;
-            }
-
+            margin-right: $inlineSpacing;
+            
             &:last-child {
                 margin-right: 0;
-            }
+            }            
         }
     }
 
@@ -41,6 +38,8 @@
     }
 
     .p-dialog-footer {
+        display: flex;
+
         border-top:  $dialogFooterBorder;
         background: $overlayContentBg;
         color: $panelFooterTextColor;
@@ -55,25 +54,31 @@
         }
     }
 
+    .p-confirm-dialog-accept {
+        order: 1;
+    }
+
+    .p-confirm-dialog-reject {
+        order: 2;
+    }
+
     &.p-dialog-maximized {
         .p-dialog-header, .p-dialog-content:last-of-type {
             border-radius: 0;
         }
     }
-
+    
 
     &.p-confirm-dialog {
         .p-confirm-dialog-icon {
             font-size: $primeIconFontSize * 2;
-
+            
             &.p-icon {
                 width: $primeIconFontSize * 2;
                 height: $primeIconFontSize * 2;
             }
         }
 
-        .p-confirm-dialog-message {
-            margin-left: $inlineSpacing * 2;
-        }
+        .p-confirm-dialog-message {}
     }
 }
