--- a/src/theme-base/components/overlay/_overlaypanel.scss
+++ b/src/theme-base/components/overlay/_overlaypanel.scss
@@ -24,40 +24,45 @@
 
         &:enabled:hover {
             background: $buttonHoverBg;
-            color: $buttonTextHoverColor;
+            color: $buttonHoverTextColor;
         }
     }
 
     &:after {
         border: solid transparent;
-        border-color: rgba($overlayContentBg, 0);
+        border-color: transparent;
         border-bottom-color: $overlayContentBg;
+        border-width: 6px;
     }
 
     &:before {
         border: solid transparent;
+        border-width: 8px;
 
         @if (nth($overlayContentBorder, 2) == 'none') {
-            border-color: rgba($overlayContentBg, 0);
-            border-bottom-color: scale-color($overlayContentBg, $lightness: -5%);
+            border-color: transparent;
+            border-bottom-color: $overlayContentBorderColor;
         }
         @else {
-            border-color: rgba(nth($overlayContentBorder, 3), 0);
-            border-bottom-color: scale-color(nth($overlayContentBorder, 3), $lightness: -5%);
+            border-color: transparent;
+            border-bottom-color: $overlayContentBorderColor;
         }
     }
 
-    &.p-overlaypanel-flipped {
+    &.p-overlaypanel-flipped {        
         &:after {
             border-top-color: $overlayContentBg;
+            border-bottom-color: transparent;
         }
 
         &:before {
             @if (nth($overlayContentBorder, 2) == 'none') {
-                border-top-color: $overlayContentBg;
+                border-top-color: $overlayContentBorder;
+                border-bottom-color: transparent;
             }
             @else {
                 border-top-color: nth($overlayContentBorder, 3);
+                border-bottom-color: transparent;
             }
         }
     }
