--- a/src/theme-base/components/panel/_card.scss
+++ b/src/theme-base/components/panel/_card.scss
@@ -1,8 +1,14 @@
 .p-card {
-    background: $panelContentBg;
-    color: $panelContentTextColor;
+    overflow: hidden;
+
+    color: $cardTextColor;
+    font-size: $cardTextFontSize;
+
+    border-radius: $cardBorderRadius;
+    border: $cardBorder;
+
+    background: $cardBg;
     box-shadow: $cardShadow;
-    border-radius: $borderRadius;
 
     .p-card-body {
         padding: $cardBodyPadding;
@@ -11,12 +17,12 @@
     .p-card-title {
         font-size: $cardTitleFontSize;
         font-weight: $cardTitleFontWeight;
-        margin-bottom: $inlineSpacing;
+        margin-bottom: .25rem;
     }
 
     .p-card-subtitle {
+        font-size: $cardSubTitleFontSize;
         font-weight: $cardSubTitleFontWeight;
-        margin-bottom: $inlineSpacing;
         color: $cardSubTitleColor;
     }
 
