--- a/src/theme-base/components/panel/_stepper.scss
+++ b/src/theme-base/components/panel/_stepper.scss
@@ -4,6 +4,7 @@
 .p-stepper {
   .p-stepper-nav {
     display: flex;
+    gap: $inlineSpacing;
     justify-content: space-between;
     margin: 0;
     padding: 0;
@@ -11,18 +12,28 @@
   }
 
   .p-stepper-header {
-    padding: $inlineSpacing;
+    padding: $inlineSpacing 0;
+
+    &.p-disabled {
+      opacity: 1; // Костыль на прозрачность
+
+      .p-stepper-action {
+        opacity: $disabledOpacity;
+      }
+    }
 
     .p-stepper-action {
+      flex-grow: 0;
       transition: $listItemTransition;
       border-radius: $borderRadius;
       background: $stepsItemBg;
       outline-color: transparent;
+      padding: 0;
 
       .p-stepper-number {
+        font-weight: $stepsItemFontWeight;
         color: $stepsItemNumberColor;
         border: $stepsItemBorder;
-        border-width: 2px;
         background: $stepsItemBg;
         min-width: $stepsItemNumberWidth;
         height: $stepsItemNumberHeight;
@@ -35,7 +46,7 @@
       .p-stepper-title {
         margin-left: $inlineSpacing;
         color: $stepsItemTextColor;
-        font-weight: $stepsItemActiveFontWeight;
+        font-weight: $stepsItemFontWeight;
         transition: $actionIconTransition;
       }
 
@@ -48,6 +59,7 @@
       .p-stepper-number {
         background: $highlightBg;
         color: $highlightTextColor;
+        border-color: transparent;
       }
 
       .p-stepper-title {
@@ -77,8 +89,8 @@
   .p-stepper-separator {
     background-color: $timelineEventColor;
     width: 100%;
-    height: 2px;
-    margin-inline-start: calc($inlineSpacing * 2);
+    height: 1px;
+    margin-inline-start: $inlineSpacing;
     transition: $listItemTransition;
   }
 
